Add customer booking and payment frontend
